<resources>
    <string name="app_name">SSPL_Apps_v2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
    <string name="username_hint">Enter username</string>
    <string name="password_hint">Enter password</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="label_jabatan">Jabatan</string>
    <string name="label_name">Name</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="seed_production">Seed Production</string>
    <string name="breeding">Breeding</string>
    <string name="label_menu_name">Menu name</string>
    <string name="lbk">LBK</string>
    <string name="germinasi">Germinasi</string>
    <string name="germinasi_1">Germinasi - Proses I</string>
    <string name="germinasi_2">Germinasi - Proses II</string>
    <string name="laboratorium_buah_kawinan">Laboratorium Buah Kawinan</string>
    <string name="label_sub_menu_detail">Sub Menu Detail</string>
    <string name="description_icon">Icon</string>

    <string name="panen">Panen</string>
    <string name="timbang">Timbang</string>
    <string name="ethreel">Ethreel</string>
    <string name="rontok">Rontok</string>
    <string name="rendam">Rendam</string>
    <string name="kupas">Kupas</string>
    <string name="sortasi">Sortasi</string>
    <string name="penggonian">Penggonian</string>
    <string name="gudang">Gudang</string>
    <string name="pengiriman">Pengiriman</string>
    <string name="penerimaan_kiriman">Penerimaan Kiriman</string>
    <string name="penyimpanan_kiriman">Penyimpanan Kiriman</string>

    <string name="r_apung">R. Apung</string>
    <string name="r_apung_afkir">R. Apung Afkir</string>
    <!--  rendam / sudah ada   -->
    <string name="fungisida">Fungisida</string>
    <string name="aerasi">Aerasi</string>
    <string name="kering_angin">Kering Angin</string>
    <string name="suhu_ruang_panas">Suhu Ruang Panas</string>
    <string name="ruang_panas">Ruang Panas</string>


    <string name="prehating">Prehating</string>
    <string name="r_gelap">R. Gelap</string>
    <string name="aerasi_r_gelap">Aerasi R. Gelap</string>
    <string name="kutip_1">Kutip I</string>
    <string name="kutip_2">Kutip II</string>
    <string name="kutip_3">Kutip III</string>
    <string name="kutip_4">Kutip IV</string>
    <string name="kutip_5">Kutip V</string>
    <string name="kutip_kch_1">Kutip KCH I</string>
    <string name="kutip_kch_2">Kutip KCH II</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tambah">Tambah</string>
    <string name="no_kawinan">No. Kawinan</string>
    <string name="daftar_nomor_kawinan_yang_belum_dikerjakan">Daftar nomor kawinan yang belum dikerjakan:</string>
    <string name="label_0">0</string>
    <string name="label_time">HH:ii:ss</string>
    <string name="keterangan">Keterangan</string>
    <string name="simpan">SIMPAN</string>
    <string name="berat">Berat</string>
    <string name="no_kaleng">No. Kaleng</string>
    <string name="jumlah_normal">Jumlah normal</string>
    <string name="jumlah_afkir_kecil">Jumlah afkir kecil</string>
    <string name="jumlah_afkir_pecah">Jumlah afkir pecah</string>
    <string name="jumlah_afkir_bule">Jumlah afkir bule</string>
    <string name="jumlah_periksa_lembaga">Jumlah periksa lembaga</string>
    <string name="daftar_nomor_goni_yang_belum_dikerjakan">Daftar nomor goni yang belum dikerjakan</string>
    <string name="no_goni">No. Goni</string>
    <string name="rak">Rak</string>
    <string name="baris">Baris</string>
    <string name="kolom">Kolom</string>
    <string name="daftar_nomor_produksi_yang_afkir">Daftar nomor produksi yang afkir</string>
    <string name="no_produksi">No. Produksi</string>
    <string name="jumlah_afkir">Jumlah Afkir</string>
    <string name="daftar_nomor_kantong_yang_belum_dikerjakan">Daftar nomor kantong yang belum dikerjakan</string>
    <string name="no_kantong">No. Kantong</string>
    <string name="no_bak">No. Bak</string>
    <string name="daftar_nomor_kantong_yang_afkir">Daftar nomor kantong yang afkir</string>
    <string name="pv">PV</string>
    <string name="sv">SV</string>
    <string name="ruang">Ruang</string>
    <string name="termometer_1">Termometer 1</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="termometer_2">Termometer 2</string>
    <string name="termometer_3">Termometer 3</string>
    <string name="daftar_nomor_kantong_yang_dikerjakan">Daftar nomor kantong yang dikerjakan</string>
    <string name="no_kutip">No. Kutip</string>
    <string name="jumlah_kantong">Jumlah Kantong</string>
    <string name="jumlah_kecambah_normal">Jumlah Kecambah Normal</string>
    <string name="no_kutip_kch">No Kutip KCH</string>
    <string name="jumlah_kecambah_halus">Jumlah Kecambah Halus</string>
    <string name="jumlah_kecambah_afkir">Jumlah Kecambah Afkir</string>
    <string name="jumlah_kecambah_busuk">Jumlah Kecambah Busuk</string>
    <string name="jumlah_kecambah_tidak_tumbuh">Jumlah Kecambah Tidak Tumbuh</string>
    <string name="daftar_nomor_kutip_yang_belum_dikerjakan">Daftar nomor kutip yang belum dikerjakan</string>
    <string name="daftar_nomor_produksi_yang_belum_dikerjakan">Daftar nomor produksi yang belum dikerjakan</string>
    <string name="posisi">Posisi</string>
    <string name="jumlah_abnormal">Jumlah abnormal</string>

</resources>