<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.seedp.germinasi_2.kutip_1.SeedGermin2Kutip1TambahFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/kantong_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_no_kantong"
                android:layout_width="0dp"
                android:layout_weight=".8"
                android:layout_height="50dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_margin="2dp"
                android:hint="@string/no_kantong"
                android:drawablePadding="12dp"
                android:background="@drawable/edt_text_custom"
                android:elevation="2dp"
                android:inputType="none" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_scan_kantong"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="53dp"
                android:src="@drawable/ic_qr_code_scanner"
                android:tint="@color/colorWhite"
                android:background="@drawable/btn_shape_rounded"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_kutip"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:padding="10dp"
            android:hint="@string/no_kutip"
            android:drawablePadding="12dp"
            android:background="@drawable/edt_text_custom"
            android:gravity="top"
            android:elevation="2dp"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_jlh_kantong"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:padding="10dp"
            android:hint="@string/jumlah_kantong"
            android:drawablePadding="12dp"
            android:background="@drawable/edt_text_custom"
            android:gravity="top"
            android:elevation="2dp"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_jlh_kecambah_normal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:padding="10dp"
            android:hint="@string/jumlah_kecambah_normal"
            android:drawablePadding="12dp"
            android:background="@drawable/edt_text_custom"
            android:gravity="top"
            android:elevation="2dp"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_no_kutip_kch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:padding="10dp"
            android:hint="@string/no_kutip_kch"
            android:drawablePadding="12dp"
            android:background="@drawable/edt_text_custom"
            android:gravity="top"
            android:elevation="2dp"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_jlh_kecambah_halus"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:padding="10dp"
            android:hint="@string/jumlah_kecambah_halus"
            android:drawablePadding="12dp"
            android:background="@drawable/edt_text_custom"
            android:gravity="top"
            android:elevation="2dp"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_jlh_kecambah_afkir"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:padding="10dp"
            android:hint="@string/jumlah_kecambah_afkir"
            android:drawablePadding="12dp"
            android:background="@drawable/edt_text_custom"
            android:gravity="top"
            android:elevation="2dp"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_jlh_kecambah_busuk"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:padding="10dp"
            android:hint="@string/jumlah_kecambah_busuk"
            android:drawablePadding="12dp"
            android:background="@drawable/edt_text_custom"
            android:gravity="top"
            android:elevation="2dp"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_keterangan"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:padding="10dp"
            android:hint="@string/keterangan"
            android:drawablePadding="12dp"
            android:background="@drawable/edt_text_custom"
            android:gravity="top"
            android:elevation="2dp"
            android:inputType="text|textMultiLine" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/btn_shape_rounded"
            android:textStyle="bold"
            android:text="@string/simpan"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>