<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    tools:context=".ui.breed.germinasi_1.aerasi.BreedGermin1AerasiFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_keterangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/daftar_nomor_produksi_yang_belum_dikerjakan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/jumlah_pekerjaan"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="5dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/label_keterangan"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/label_0"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_item_list"
        android:layout_marginTop="28dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_list_produksi"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:backgroundTint="@color/colorAccent"
        android:tint="@color/colorAccent"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_add_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/tambah" />


</androidx.constraintlayout.widget.ConstraintLayout>