<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.seedp.germinasi_1.suhu_r_panas.SeedGermin1SuhuRPanasActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/header_menu_list">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_arrow_back_white"
            android:background="@drawable/button_back_shape"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seed_production"
            android:layout_marginTop="-20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/germinasi_1"
            android:layout_marginBottom="11dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/menu_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ruang_panas"
            android:layout_marginBottom="11dp"
            app:layout_constraintTop_toBottomOf="@id/sub_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorWhite"
            android:textSize="17sp"
            android:textStyle="bold"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruang"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_pv"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:hint="@string/pv"
                    android:drawablePadding="12dp"
                    android:background="@drawable/edt_text_custom"
                    android:elevation="2dp"
                    android:inputType="none" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_sv"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="6dp"
                    android:hint="@string/sv"
                    android:drawablePadding="12dp"
                    android:background="@drawable/edt_text_custom"
                    android:elevation="2dp"
                    android:inputType="none" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/termometer_1"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_termo1_min"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:hint="@string/min"
                    android:drawablePadding="12dp"
                    android:background="@drawable/edt_text_custom"
                    android:elevation="2dp"
                    android:inputType="none" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_termo1_max"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="6dp"
                    android:hint="@string/max"
                    android:drawablePadding="12dp"
                    android:background="@drawable/edt_text_custom"
                    android:elevation="2dp"
                    android:inputType="none" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/termometer_2"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_termo2_min"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:hint="@string/min"
                    android:drawablePadding="12dp"
                    android:background="@drawable/edt_text_custom"
                    android:elevation="2dp"
                    android:inputType="none" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_termo2_max"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="6dp"
                    android:hint="@string/max"
                    android:drawablePadding="12dp"
                    android:background="@drawable/edt_text_custom"
                    android:elevation="2dp"
                    android:inputType="none" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/termometer_3"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_termo3_min"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:hint="@string/min"
                    android:drawablePadding="12dp"
                    android:background="@drawable/edt_text_custom"
                    android:elevation="2dp"
                    android:inputType="none" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_termo3_max"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="6dp"
                    android:hint="@string/max"
                    android:drawablePadding="12dp"
                    android:background="@drawable/edt_text_custom"
                    android:elevation="2dp"
                    android:inputType="none" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/btn_shape_rounded"
                android:textStyle="bold"
                android:text="@string/simpan"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>