<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/header_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/header_login"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#909090"
        android:text="@string/welcome"
        android:layout_marginTop="-20dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_login"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/login_username_icon"
        android:hint="@string/username_hint"
        android:drawablePadding="12dp"
        android:background="@drawable/edt_text_custom"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        android:elevation="2dp"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/login_password_icon"
        android:hint="@string/password_hint"
        android:drawablePadding="12dp"
        android:background="@drawable/edt_text_custom"
        android:elevation="2dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/edt_username"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="20sp"
        android:background="@drawable/btn_shape_rounded"
        android:textColor="@android:color/white"
        android:text="@string/login"
        android:textStyle="bold"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>